# quartz_forge

./: .gitignore  Cargo.toml  OPERATOR_CHECKLIST.md  QUARTZ_FORGE_MCP_TOOL_CATALOG.md  README.md  USER_MANUAL.md
mcp_server/: Cargo.toml
mcp_server/src/: main.rs
src/: lib.rs  main.rs  mcp.rs
src/app/: condition_editor.rs  editors.rs  logic_events_editor.rs  mod.rs  syntax_highlight.rs
src/core/: layout.rs  mod.rs  project.rs  quartz_domain.rs
src/services/: codegen.rs  codegen_text.rs  hot_reload.rs  mod.rs  persistence.rs  project_import.rs  project_sync.rs
