[package]
name = "quartz_forge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = true }
