[package]
name = "quartz_forge_mcp_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quartz_forge_mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"